# response-mcp

./: .gitignore  README.md  STATUS.md  pyproject.toml
src/response_mcp/: __init__.py  adapter.py  server.py  tools.py
